updated build section to fix test coverage, updated dependencies to have them in sync with house-manager